--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,3 +27,22 @@
     </application>
 
 </manifest>
+
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.catalogoapp">
+ 
+    <uses-permission android:name="android.permission.INTERNET" />
+ 
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.CatalogoApp">
+        <activity android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+    </application>
+</manifest>
